<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/default_padding"
        app:cardElevation="@dimen/default_padding"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/ic_launcher_background"
                android:fadingEdge="horizontal|vertical"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_foreground"
                tools:ignore="ContentDescription,InvalidId" />

            <TextView
                android:id="@+id/username_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_padding"
                android:layout_marginBottom="@dimen/default_padding"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image"
                tools:text="wangdaiwu" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/name_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/default_padding"
        app:cardElevation="@dimen/default_padding"
        app:layout_constraintTop_toBottomOf="@id/main_card">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding">

            <ImageView
                android:id="@+id/name_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/name_icon" />

            <TextView
                android:id="@+id/name_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/name_icon"
                app:layout_constraintTop_toBottomOf="@id/name_label"
                tools:text="wang" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/age_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/default_padding"
        app:cardElevation="@dimen/default_padding"

        app:layout_constraintTop_toBottomOf="@id/name_card">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding">

            <ImageView
                android:id="@+id/age_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/age"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/age_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/age"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/age_icon" />

            <TextView
                android:id="@+id/age_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/age_icon"
                app:layout_constraintTop_toBottomOf="@id/age_label"
                tools:text="18" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/telephone_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_padding"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/default_padding"
        app:cardElevation="@dimen/default_padding"

        app:layout_constraintTop_toBottomOf="@id/age_card">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding">

            <ImageView
                android:id="@+id/telephone_icon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:importantForAccessibility="no"
                android:src="@drawable/telephone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Title, secondary and supporting text -->
            <TextView
                android:id="@+id/telephone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:text="@string/telephone"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/telephone_icon" />

            <TextView
                android:id="@+id/telephone_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginTop="8dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/telephone_icon"
                app:layout_constraintTop_toBottomOf="@id/telephone_label"
                tools:text="123456" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_padding"
        android:onClick="signOut"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/telephone_card" />

</androidx.constraintlayout.widget.ConstraintLayout>